# Vyoma

./: .gitignore  .repomixignore  ADR.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  ROADMAP.md  TESTING.md  TROUBLESHOOTING.md  cleanup_resources.sh  ignite-technical-spec.md  implementation_plan.md  mock_cni.sh  repomix-output.txt  repomix-output.xml  repomix.config.json  tasks.md  validate_rc.sh  vyoma-technical-spec.md
.github/workflows/: chaos.yml  compat-nightly.yml  cri-conformance.yml  e2e-tests.yml  full-test-suite.yml  fuzz.yml  release.yml  smoke-test.yml
crates/ign/: Cargo.toml
crates/ign/src/: main.rs  test_unix.rs
crates/ignite-agent/: Cargo.toml
crates/ignite-agent-vm/: Cargo.toml
crates/ignite-agent-vm/src/: main.rs
crates/ignite-agent/src/: main.rs
crates/ignite-compose/: Cargo.toml
crates/ignite-core/: Cargo.toml
crates/ignite-core/src/: api.rs  builder.rs  cgroups.rs  cni.rs  fs.rs  layers.rs  lib.rs  network.rs  oci.rs  slirp.rs  storage.rs  vmm.rs
crates/ignite-core/tests/: dm_integration.rs  layer_integration.rs  network_integration.rs  oci_integration.rs  storage_integration.rs  vmm_integration.rs
crates/ignite-image/: Cargo.toml
crates/ignite-net/: Cargo.toml
crates/ignite-proto/: Cargo.toml  build.rs
crates/ignite-proto/proto/: teleport.proto  vm.proto
crates/ignite-proto/src/: lib.rs
crates/ignite-sdk/: Cargo.toml
crates/ignite-sdk/src/: lib.rs
crates/ignite-storage/: Cargo.toml
crates/ignite-storage/src/: cow.rs  dm.rs  error.rs  ext4.rs  lib.rs  manager.rs  snapshot_tree.rs
crates/ignite-teleport/: Cargo.toml
crates/ignite-teleport/src/: lib.rs  protocol.rs  receiver.rs  sender.rs
crates/ignited/: Cargo.toml
crates/ignited/src/: auto_snapshot.rs  cluster.rs  dns.rs  grpc.rs  main.rs  metrics.rs  state.rs  timemachine.rs
crates/ignited/src/api/: handlers.rs
crates/ignited/src/state/: recovery.rs  wal.rs
crates/ignited/src/swarm/: mod.rs  raft_store.rs
crates/mvm/: Cargo.toml
crates/mvm-core/: Cargo.toml
crates/mvmd/: Cargo.toml
crates/vyoma/: Cargo.toml
crates/vyoma-agent/: Cargo.toml
crates/vyoma-agent-protocol/: Cargo.toml
crates/vyoma-agent-vm/: Cargo.toml
crates/vyoma-build/: Cargo.toml
crates/vyoma-build/src/: layer.rs  lib.rs  parser.rs  runner.rs
crates/vyoma-build/tests/: build_runner_tests.rs
crates/vyoma-compose/: Cargo.toml
crates/vyoma-core/: Cargo.toml
crates/vyoma-core/src/: api.rs  attest.rs  builder.rs  cgroups.rs  ch_types.rs  cni.rs  firmware.rs  fs.rs  initramfs.rs  lib.rs  network.rs  oci.rs  policy.rs  proxy.rs  rootless.rs  slirp.rs  storage.rs  unified_attest.rs  vmm.rs  vtpm.rs
crates/vyoma-core/tests/: dm_integration.rs  layer_integration.rs  network_integration.rs  oci_integration.rs  storage_integration.rs  vmm_integration.rs
crates/vyoma-image/: Cargo.toml
crates/vyoma-image/src/: converter.rs  hub_bridge.rs  lib.rs  signing.rs  vmif.rs
crates/vyoma-net/: Cargo.toml
crates/vyoma-net/src/: bridge.rs  error.rs  lib.rs  netns.rs  tap.rs  wireguard.rs
crates/vyoma-proto/: Cargo.toml  build.rs
crates/vyoma-sdk/: Cargo.toml
crates/vyoma-sdk/src/: agent_client.rs  lib.rs
crates/vyoma-storage/: Cargo.toml
crates/vyoma-storage/src/: cow.rs  dm.rs  error.rs  lib.rs  manager.rs  snapshot_tree.rs
crates/vyoma-teleport/: Cargo.toml
crates/vyoma-vk8s/: Cargo.toml
crates/vyoma-vk8s/src/: main.rs
crates/vyomad/: Cargo.toml
crates/vyomad/src/: auth.rs  auto_snapshot.rs  chaos.rs  chaos_tests.rs  cluster.rs  dns.rs  grpc.rs  hibernation.rs  lib.rs  main.rs  metrics.rs  privdrop.rs  state.rs  timemachine.rs  ui.rs
crates/vyomad/src/api/: handlers.rs
crates/vyomad/src/state/: recovery.rs  wal.rs
crates/vyomad/src/swarm/: integration_tests.rs  mod.rs  network_integration.rs  raft.rs  raft_network.rs  raft_types.rs
crates/vyomad/src/vm_service/: agent.rs  boot.rs  build.rs  config.rs  error_recovery.rs  image.rs  measured_boot_tests.rs  mocks.rs  mod.rs  network.rs  policy.rs  stage_tests.rs  state.rs  storage.rs  types.rs
crates/vyomad/tests/: vm_service_tests.rs
decisions/: 018-future-ecosystem-strategy.md
docs/: ADR.md  API_SPEC.md  DISTRIBUTION_STRATEGY.md  PROJECT_SUMMARY.md  RELEASE_PROCESS.md  ROADMAP.md  TROUBLESHOOTING.md  branding_research.md  ignite-technical-spec.md  implementation_plan.md  measured-boot-architecture.md  pass.md  swarm-migration.md  tasks.md  testing.md  trusted-boot.md
docs/artifacts/: implementation_plan.md  walkthrough.md
docs/decisions/: 016-cluster-architecture.md  017-overlay-networking.md  018-future-ecosystem-strategy.md  019-privileged-service-model.md  020-initramfs-agent-injection.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: oci_manifest.rs  rest_api.rs  vyomafile.rs
openspec/designs/: adr-020-oci-image-config.md  adr-021-virtiofsd-bundling.md  adr-022-privilege-model.md  adr-023-wal-sled.md  adr-024-compose-schema-v3.md  adr-025-resource-teardown.md  adr-026-ignite-storage.md  adr-027-ignite-net.md  adr-028-snapshot-tree.md  adr-029-wsl2-kvm-fixes.md  adr-030-wireguard.md  adr-031-raft.md  adr-032-teleport.md  adr-033-grpc.md  adr-034-prometheus.md  adr-035-vmif.md  adr-036-timemachine.md  adr-037-hibernation.md  adr-038-vk8s.md  adr-039-trustedboot.md  adr-040-agent.md  adr-041-sdk.md  adr-042-studio-v2.md  adr-043-in-vm-agent.md  adr-044-connection-architecture.md
packaging/: build.sh
packaging/deb/: build.sh
packaging/rpm/: build.sh
packaging/systemd/: ignited.service  vyoma-net.service  vyomad.service
scripts/: build_deb.sh  build_rpm.sh  cleanup-all.sh  compute-pcr-values.sh  run-all-tests.sh  setup-ovmf.sh  test_integration.sh
tests/: README.md  chaos.rs  migration_test.rs
tests/chaos/: chaos_net.sh  chaos_storage.sh  daemon_restart.rs  mod.rs  resource_cleanup.rs  (+1 more)
tests/compat/: Cargo.toml  images.json  top100.txt
tests/compat/src/: health.rs  lib.rs  main.rs  types.rs
tests/integration/: Cargo.toml  initramfs.rs
ui/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js
vk8s/: Makefile  go.mod
(+136 files in other folders)
