[workspace]
members = [
    "crates/ignited",
    "crates/ign",
    "crates/ignite-core", "crates/ignite-compose",
    "crates/ignite-storage",
    "crates/ignite-net",
    "crates/ignite-teleport",
    "crates/ignite-proto",
    "crates/ignite-image",
    "crates/ignite-agent",
    "crates/ignite-sdk",
]
resolver = "2"

[workspace.package]
version = "1.8.0"
edition = "2021"
authors = ["Subeshrock <subesh.rock.3@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.10"
tar = "0.4"
flate2 = "1.0"
futures = "0.3"
# We will likely need these for the Phase 2/3:
# devicemapper = "..." 
# rtnetlink = "..."
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
prometheus = "0.13"
