[workspace]
members = [
    "crates/vyomad",
    "crates/vyoma",
    "crates/vyoma-core", "crates/vyoma-compose",
    "crates/vyoma-storage",
    "crates/vyoma-net",
    "crates/vyoma-teleport",
    "crates/vyoma-proto",
    "crates/vyoma-image",
    "crates/vyoma-agent",
    "crates/vyoma-sdk",
    "crates/vyoma-agent-vm", "crates/vyoma-vk8s",
]
resolver = "2"

[workspace.package]
version = "2.1.2"
edition = "2021"
authors = ["Subeshrock <subesh.rock.3@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.10"
tar = "0.4"
flate2 = "1.0"
futures = "0.3"
# We will likely need these for the Phase 2/3:
# devicemapper = "..." 
# rtnetlink = "..."
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
prometheus = "0.13"
