[workspace]
members = [
    "crates/vyomad",
    "crates/vyoma",
    "crates/vyoma-core", "crates/vyoma-compose",
    "crates/vyoma-storage",
    "crates/vyoma-net",
    "crates/vyoma-teleport",
    "crates/vyoma-proto",
    "crates/vyoma-build",
    "crates/vyoma-image",
    "crates/vyoma-sdk",
    "crates/vyoma-agent-vm",
    "crates/vyoma-agent-protocol",
    "crates/vyoma-vk8s",
    "tests/compat",
    "tests/integration",
]
resolver = "2"

[workspace.package]
version = "2.1.2"
edition = "2021"
authors = ["Subeshrock <subesh.rock.3@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.10"
tar = "0.4"
flate2 = "1.0"
cpio = "0.2"
futures = "0.3"
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
prometheus = "0.13"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
