[package]
name = "ign"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4", features = ["derive"] }
tokio.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
