[package]
name = "ignite-agent-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
vsock = "0.5"
sysinfo = "0.30"

[[bin]]
name = "ignite-agent-vm"
path = "src/main.rs"
