[package]
name = "ignite-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "ignite-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bytes = "1.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
