[package]
name = "ignite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.11", features = ["json", "stream"] }
futures.workspace = true
