[package]
name = "ignite-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
futures = "0.3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
