[package]
name = "ignite-teleport"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
uuid = { version = "1.7", features = ["v4"] }
bytes = "1.5"
bitvec = "1.0"

[dev-dependencies]
tokio-test = "0.4"
