[package]
name = "vyoma-build"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
thiserror = "1.0"
tempfile.workspace = true
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
bincode = "1.3"
vyoma-core = { path = "../vyoma-core" }
vyoma-image = { path = "../vyoma-image" }
vyoma-storage = { path = "../vyoma-storage" }

[dev-dependencies]
tokio-test = "0.4"