[package]
name = "vyoma-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
futures.workspace = true
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
libc = "0.2.178"
base64 = "0.22.1"
dirs = "6.0.0"
hex = "0.4"
vyoma-net = { path = "../vyoma-net" }
vyoma-storage = { path = "../vyoma-storage" }
