[package]
name = "vyoma-image"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
toml = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tar = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
