[package]
name = "vyoma-net"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnetwork = "0.20"
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "net"] }
boringtun = { version = "0.7", features = ["device"] }
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = "0.6"
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
