[package]
name = "vyoma-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vyoma-proto = { path = "../vyoma-proto" }
vyoma-agent-protocol = { path = "../vyoma-agent-protocol" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.1"
