[package]
name = "vyoma-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
devicemapper = "0.34"
loopdev = { package = "loopdev-3", version = "0.5.3" }
[dev-dependencies]
tempfile = "3.0"
