[package]
name = "vyoma-vk8s"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic = "0.10"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
vyoma-sdk = { path = "../vyoma-sdk" }
