[package]
name = "compat-matrix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compat-matrix"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
url = "2.5"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
futures = { workspace = true }

[features]
default = []
healthchecks = []
